docker/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-front
  labels:
    app: admin-front
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: admin-front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: admin-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front
  template:
    metadata:
      labels:
        app: admin-front
    spec:
      containers:
        - name: admin-front
          image: admin-front
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: port
